# GEngine_0b10D

./: .gitattributes  CMakeLists.txt  README.md
assets/: scene.json
demo/: audio.mov  collision&event.mov  flee.mov  follow.mov  gravity.mov  patrol.mov
docs/: Boundry.md  Items.md  Physics.md
docs/components/: Collider.md  Health.md  Physics.md
docs/systems/: AI.md  Animations.md  Audio.md  Camera.md  Collisions.md  Combat.md  Movement.md  Render.md  Surface.md
include/AI/: AIBehavior.h  AIController.h  AISystem.h
include/AI/behaviors/: AttackBehavior.h  ChaseBehavior.h  DeadBehavior.h  FleeBehavior.h  FollowBehavior.h  IdleBehavior.h  PatrolBehavior.h
include/animations/: AnimationUtils.h
include/components/: AccelerationComponent.h  BoundryComponent.h  CameraComponent.h  ColliderComponent.h  ForceComponent.h  HealthComponent.h  PhysicsComponent.h  SurfaceComponent.h  TransformComponent.h
include/core/: ComponentStorage.h  Entity.h  EntityManager.h  IComponentStorage.h  IRenderer.h  ISystem.h  SystemManager.h  World.h
include/core/components/: PhysicsComponent.h  TransformComponent.h  VelocityComponent.h
include/core/systems/: MovementSystem.h  PhysicsSystem.h  RenderSystem.h
include/event/core/: Event.h  EventBus.h  EventFactory.h  EventManager.h
include/event/custom_events/: CollisionEvent.h  CollisionEventResolver.h  DamageEvent.h  HealEvent.h  MovementEvent.h  PhysicsEvent.h  SurfaceBehaviorEvent.h  TeleportEvent.h
include/graphics/: BackgroundLayer.h  Renderer.h  Texture.h
include/input/: InputManager.h
include/level_manager/: AssetManager.h  LevelData.h  LevelManager.h  ResourceLoader.h  SceneManager.h
include/scene/: SpriteComponent.h
include/systems/: AnimationSystem.h  AudioSystem.h  BoundrySystem.h  CameraSystem.h  CollisionSystem.h  CombatSystem.h  EntityCreationSystem.h  ItemsDropsSystem.h  MovementSystem.h  PhysicsSystem.h  RenderSystem.h  SurfaceBehaviorSystem.h
include/utils/: AudioTypes.h  CollisionLayer.h  EntityTypes.h  EventResolver.h  Int2.h  ItemsAndDrops.h  SpatialGrid.h  SurfaceTypes.h  Vector.h
include/window/: Window.h
src/: main.cpp
src/AI/: AIController.cpp  AISystem.cpp
src/core/: Entity.cpp  SystemManager.cpp
src/core/systems/: MovementSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
src/graphics/: Renderer.cpp  Texture.cpp
src/input/: InputManager.cpp
src/level_manager/: AssetManager.cpp  LevelManager.cpp  ResourceLoader.cpp  SceneManager.cpp
src/scene/: Sprite.cpp  Sprite.h
src/systems/: AnimationSystem.cpp  AudioSystem.cpp  BoundrySystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  CombatSystem.cpp  ItemsDropsSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  SurfaceBehaviorSystem.cpp
src/window/: Window.cpp
tests/: scene.json  test_AudioSystem.cpp  test_CameraSystem.cpp  test_CollisionSystem.cpp  test_ComponentStorage.cpp  test_EntityManager.cpp  test_EventTest.cpp  test_ItemsDropsSystem.cpp  test_LevelManager.cpp  test_MovementSystem.cpp  test_PhysicsSystem.cpp  test_RenderSystem.cpp  test_SystemManager.cpp  test_World.cpp
